--- a/src/main/resources/.h2.server.properties
+++ b/src/main/resources/.h2.server.properties
@@ -1,4 +1,5 @@
 #H2 Server Properties
+#Sun Sep 23 22:02:30 EDT 2018
 0=JHipster H2 (Disk)|org.h2.Driver|jdbc\:h2\:file\:./target/h2db/db/reda|REDA
 webAllowOthers=true
 webPort=8082
