--- a/package.json
+++ b/package.json
@@ -47,8 +47,11 @@
     "@types/node": "10.9.2",
     "@types/react": "16.4.12",
     "@types/react-dom": "16.0.7",
+    "@types/react-fontawesome": "^1.6.4",
+    "@types/react-highlight": "^0.12.1",
     "@types/react-redux": "6.0.6",
     "@types/react-router-dom": "4.3.0",
+    "@types/reactstrap": "^6.0.3",
     "@types/redux": "3.6.31",
     "@types/webpack-env": "1.13.6",
     "browser-sync": "2.24.6",
@@ -79,10 +82,13 @@
     "mini-css-extract-plugin": "0.4.2",
     "moment-locales-webpack-plugin": "1.0.7",
     "optimize-css-assets-webpack-plugin": "5.0.0",
+    "postcss-loader": "3.0.0",
     "prettier": "1.14.2",
     "react-infinite-scroller": "1.2.0",
     "redux-mock-store": "1.5.3",
     "rimraf": "2.6.2",
+    "sass": "1.13.0",
+    "sass-loader": "7.1.0",
     "simple-progress-webpack-plugin": "1.1.2",
     "sinon": "6.1.5",
     "source-map-loader": "0.2.4",
@@ -90,9 +96,6 @@
     "stripcomment-loader": "0.1.0",
     "style-loader": "0.22.1",
     "swagger-ui": "2.2.10",
-    "postcss-loader": "3.0.0",
-    "sass": "1.13.0",
-    "sass-loader": "7.1.0",
     "terser-webpack-plugin": "1.0.2",
     "thread-loader": "1.2.0",
     "to-string-loader": "1.1.5",
