--- a/src/main/resources/.h2.server.properties
+++ b/src/main/resources/.h2.server.properties
@@ -1,4 +1,5 @@
 #H2 Server Properties
+#Tue Oct 02 23:04:04 EDT 2018
 0=JHipster H2 (Memory)|org.h2.Driver|jdbc\:h2\:mem\:reda|reda
 webAllowOthers=true
 webPort=8082
